--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Pet</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Adote aqui</title>
+</head>
+<body>
+  <header>
     <div class="header" id="header">
       <div class="logo">
-        <img src="LogoPet.png" class="img_logo" alt="Desenho cachorro" />
+        <img src="imagens/LogoPet.png" class="img_logo" alt="Desenho cachorro" />
       </div>
       <nav class="navigation_header">
         <a href="#">Inicio</a>
@@ -18,6 +19,52 @@
         <a href="#">Sobre</a>
         <a href="#">Contato</a>
       </nav>
-    </div>
-  </body>
+  </header>
+
+  <main>
+    <section class="conteudo_1">
+      <div class="text">
+        <h2>Adoção responsável</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit placeat similique, necessitatibus excepturi debitis laboriosam ipsum nemo reiciendis corporis officia dignissimos natus facilis? Reiciendis vel molestiae maiores nisi temporibus laborum.</p>
+      </div>
+      <img class="imagem" src="imagens/ADOTE_AMOR_arteprincipal222.png" alt="">
+    </section>
+
+    <h2 class="titulo_2">Disponíveis para adoção</h2>
+
+    <section class="pets">
+      <div class="pets_grid">
+        <div>
+          <img src="imagens/cao1.jpg" alt="">
+          <p>Pipoca</p>
+        </div>
+        <div>
+          <img src="imagens/cao2.jpg" alt="">
+          <p>Inacio</p>
+        </div>
+        <div>
+          <img src="imagens/cao3.jpg" alt="">
+          <p>Caramelo</p>
+        </div>
+        
+        <div>
+          <img src="imagens/gato1.jpg" alt="gato1">
+          <p>Snow</p>
+        </div>
+        <div>
+          <img src="imagens/gato2.jpg" alt="gato2">
+          <p>Bolinha</p>
+        </div>
+        <div>
+          <img src="imagens/gato3.jpg" alt="gato3">
+          <p>Roger</p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+      <p>&copy;copyright • 2022 </p>
+      <p>Projeto Adote Aqui - Resilia</p>
+  </footer>
+</body>
 </html>
