--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
       </div>
       <nav class="navigation_header">
         <a href="#">Inicio</a>
-        <a href="#">Como Adotar</a>
+        <a href="#">Adoção</a>
         <a href="#">Sobre</a>
-        <a href="#">Contato</a>
       </nav>
   </header>
 
