--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <header>
     <div class="header" id="header">
       <div class="logo">
-        <img src="imagens/LogoPet.png" class="img_logo" alt="Desenho cachorro" />
+        <a href=""><img src="imagens/LogoPet.png" class="img_logo" alt="Desenho cachorro" /></a>
       </div>
       <nav class="navigation_header">
-        <a href="#">Inicio</a>
-        <a href="#">Adoção</a>
+        <a href="#inicio">Inicio</a>
+        <a href="#adocao">Adoção</a>
         <a href="#">Sobre</a>
       </nav>
   </header>
 
   <main>
-    <section class="conteudo_1">
+    <section class="conteudo_1" id="inicio">
       <div class="text">
         <h2>Adoção responsável</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit placeat similique, necessitatibus excepturi debitis laboriosam ipsum nemo reiciendis corporis officia dignissimos natus facilis? Reiciendis vel molestiae maiores nisi temporibus laborum.</p>
@@ -31,7 +31,7 @@
 
     <h2 class="titulo_2">Disponíveis para adoção</h2>
 
-    <section class="pets">
+    <section class="pets" id="adocao">
       <div class="pets_grid">
         <div>
           <img src="imagens/cao1.jpg" alt="">
@@ -62,7 +62,7 @@
     </section>
   </main>
   <footer>
-      <p>&copy;copyright • 2022 </p>
+      <p>Artur Rodrigues &copy; copyright • 2022 </p>
       <p>Projeto Adote Aqui - Resilia</p>
   </footer>
 </body>
